# prospectus_demos

./: main.py  pyproject.toml
final_notebooks/: HR24_Sample.py
final_notebooks/__marimo__/session/: HR24_Sample.py.json
notebooks/: HR24_viz.py  candidate_viz.py  make_multiselect_3D_plot_file.ipynb  sphere_viz.py
notebooks/__marimo__/session/: HR24_viz.py.json
scripts/: make_ThreeWiget_members.py
