[project]
name = "prospectus-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "duckdb>=1.5.3",
    "ipykernel>=7.2.0",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "tables>=3.11.1",
    "wigglystuff>=0.5.9",
]
